# nibsqueeze

./: .gitignore  BUILD.bazel  Makefile
src/: MMNibArchive.h  MMNibArchive.m  SortNibContents.h  SortNibContents.m  main.m
